--- a/components/common/SelectedProjects/Row/Row.module.scss
+++ b/components/common/SelectedProjects/Row/Row.module.scss
@@ -63,7 +63,7 @@
 
   &::after {
     content: '';
-    height: 1px;
+    height: 1.5px;
     width: 0;
     position: absolute;
     bottom: 0;
